--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "recharts": "^2.1.9",
     "styled-components": "^5.3.3",
     "styled-flex-component": "^3.0.5",
     "web-vitals": "^2.1.4",
